<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">1_15_safebank___mobile_banking_app</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_recent_transfer">Recent Transfer</string>
  <string name="lbl_60">60</string>
  <string name="lbl_alvis_blick">Alvis Blick</string>
  <string name="lbl_thu">THU</string>
  <string name="lbl_credit_card">Credit Card</string>
  <string name="lbl_m">M</string>
  <string name="lbl_usd">USD</string>
  <string name="lbl_united_states">United States</string>
  <string name="lbl_w">W</string>
  <string name="lbl_phone">Phone</string>
  <string name="lbl_y">Y</string>
  <string name="msg_don_t_have_an_account">Don\u2019t have an account?</string>
  <string name="lbl_date_of_birth">Date Of Birth</string>
  <string name="msg_already_have_an">Already have an account?</string>
  <string name="lbl_130_00">+$130.00</string>
  <string name="msg_confirm_password">Confirm Password</string>
  <string name="msg_verify_your_email">Verify Your Email</string>
  <string name="msg_hello_alex_welcome">Hello Alex
Welcome back!</string>
  <string name="lbl_country_region">Country/Region</string>
  <string name="lbl_log_out">Log Out</string>
  <string name="lbl_sign_in">Sign In</string>
  <string name="msg_10_790_00_total">$10,790.00 Total Purchases</string>
  <string name="msg_available_balance2">Available Balance:</string>
  <string name="lbl_50">50</string>
  <string name="lbl_transfer_funds">Transfer Funds</string>
  <string name="lbl_5534">5534</string>
  <string name="msg_enter_your_comment">Enter your comment...</string>
  <string name="lbl_devon_jerde">Devon Jerde</string>
  <string name="lbl_expense">Expense</string>
  <string name="lbl_mara_wilkinson">Mara Wilkinson</string>
  <string name="lbl_wed">WED</string>
  <string name="lbl_sun">SUN</string>
  <string name="lbl_d">D</string>
  <string name="lbl_united_kingdom">United Kingdom</string>
  <string name="lbl_to">To</string>
  <string name="lbl_3_230_00">$3,230.00</string>
  <string name="lbl_20_jan_1998">20 - Jan - 1998</string>
  <string name="lbl_40">40</string>
  <string name="lbl_history">History</string>
  <string name="lbl_request">Request</string>
  <string name="lbl_germany">Germany</string>
  <string name="lbl_apple_store">Apple Store</string>
  <string name="msg_invite_friends">Invite Friends &amp; Business</string>
  <string name="lbl_1_500_00">$1,500.00</string>
  <string name="lbl_income">Income</string>
  <string name="lbl_amount">Amount</string>
  <string name="lbl_send_email">Send Email</string>
  <string name="lbl_brazil">Brazil</string>
  <string name="lbl_444_00">-$444.00</string>
  <string name="lbl_27_00">-$27.00</string>
  <string name="lbl_today_25_june">Today, 25 June</string>
  <string name="lbl_project_manager">Project Manager</string>
  <string name="lbl_ui_ux_designer">UI/UX Designer</string>
  <string name="msg_product_designer">Product Designer</string>
  <string name="lbl_transfer">Transfer</string>
  <string name="lbl_alex_dordan">Alex Dordan</string>
  <string name="lbl_resend_code">Resend Code</string>
  <string name="lbl_20_june_2022">20 June, 2022</string>
  <string name="lbl_170_00">-$170.00</string>
  <string name="lbl_4023">4023</string>
  <string name="lbl_1_123_456_7890">+1-123-456-7890</string>
  <string name="lbl_verify_code">Verify Code</string>
  <string name="lbl_community">Community</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_skype_premium">Skype Premium</string>
  <string name="msg_please_enter_your2">Please enter your email address to
receive a </string>
  <string name="lbl_kira_kulas">Kira Kulas</string>
  <string name="lbl_fri">FRI</string>
  <string name="lbl_yesterday">Yesterday</string>
  <string name="msg_dmitry_ponomarev">Dmitry Ponomarev </string>
  <string name="lbl_linkedin">LinkedIn</string>
  <string name="msg_please_enter_your">Please enter your email address to
receive a verification code.</string>
  <string name="msg_please_enter_4_digit2">Please enter 4 digit code sent to
</string>
  <string name="lbl_18_june_2022">18 June, 2022</string>
  <string name="lbl_marlee_rice">Marlee Rice</string>
  <string name="lbl_mon">MON</string>
  <string name="lbl_forget_password">Forget Password</string>
  <string name="lbl_back_home">Back Home</string>
  <string name="msg_we_serve_with_faith">we serve with faith</string>
  <string name="lbl_comment">Comment</string>
  <string name="lbl_personal_info">Personal Info</string>
  <string name="msg_privacy_policy">Privacy &amp; Policy</string>
  <string name="lbl_xyz_gmail_com">xyz@gmail.com</string>
  <string name="lbl_tue">TUE</string>
  <string name="msg_enter_your_account">Enter your account</string>
  <string name="lbl_54_00">-$54.00</string>
  <string name="lbl_20">20</string>
  <string name="msg_available_balance">Available Balance: $3,230.00</string>
  <string name="msg_forget_password">Forget password?</string>
  <string name="lbl_web_developer">Web Developer</string>
  <string name="lbl_21_june_2022">21 June, 2022</string>
  <string name="lbl_contact_people">Contact People</string>
  <string name="lbl_100">100</string>
  <string name="lbl_1_200_00">$1,200.00</string>
  <string name="lbl_gbp">GBP</string>
  <string name="lbl_italy">Italy</string>
  <string name="msg_privacy_settings">Privacy Settings</string>
  <string name="lbl_debit_card">Debit Card</string>
  <string name="lbl_mastercard">MasterCard</string>
  <string name="lbl_change_password">Change Password</string>
  <string name="lbl_220_00">-$220.00</string>
  <string name="msg_search_country">Search Country...</string>
  <string name="lbl_behance">Behance</string>
  <string name="lbl_see_all">See All</string>
  <string name="lbl_sat">SAT</string>
  <string name="lbl_107_00">-$107.00</string>
  <string name="lbl_statistics">Statistics</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="lbl_zander_wiza">Zander Wiza</string>
  <string name="msg_10_30_pm_18_june">10:30 PM, 18 June, 2022</string>
  <string name="lbl_name">Name</string>
  <string name="msg_country_or_region">Country or Region</string>
  <string name="lbl_profile">Profile</string>
  <string name="msg_transfer_request">Transfer Request</string>
  <string name="lbl_safebank">SAFEBANK</string>
  <string name="lbl_snapchat_ads">Snapchat Ads</string>
  <string name="lbl_transfer_amount">Transfer Amount</string>
  <string name="lbl_56_00">-$56.00</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_eur">EUR</string>
  <string name="lbl_80">80</string>
  <string name="lbl_hello_alex">Hello Alex
</string>
  <string name="lbl_0">0</string>
  <string name="lbl_1">1</string>
  <string name="lbl_2">2</string>
  <string name="lbl_02">$0</string>
  <string name="lbl_confirmation">Confirmation!!</string>
  <string name="msg_5093_4690_4039_5534">5093 4690 4039 5534</string>
  <string name="lbl_3">3</string>
  <string name="lbl_4">4</string>
  <string name="lbl_5">5</string>
  <string name="msg_12_30_pm_25_june">12:30 PM, 25 June 2022</string>
  <string name="lbl_6">6</string>
  <string name="lbl_search_people">Search People</string>
  <string name="lbl_7">7</string>
  <string name="lbl_8">8</string>
  <string name="lbl_id_14345112075">ID: 14345112075</string>
  <string name="lbl_9">9</string>
  <string name="lbl_figma">Figma</string>
  <string name="lbl_faqs">FAQs</string>
  <string name="lbl_dribbble">Dribbble</string>
  <string name="lbl_spotify">Spotify</string>
  <string name="msg_graphic_designer">Graphic Designer</string>
  <string name="lbl_login">Login</string>
  <string name="msg_currency_exchange">Currency Exchange</string>
  <string name="lbl_98_00">+$98.00</string>
  <string name="msg_please_enter_4_digit">Please enter 4 digit code sent to
xyz@gmail.com</string>
  <string name="lbl_france">France</string>
  <string name="lbl_xyz123">xyz123</string>
  <string name="lbl_all">All</string>
  <string name="msg_verification_code">verification code.</string>
  <string name="msg_12_45_pm_17_june">12:45 PM, 17 June, 2022</string>
  <string name="lbl_notification">Notification</string>
  <string name="lbl_welcome_back">Welcome back!</string>
  <string name="lbl_netflix">Netflix</string>
  <string name="lbl_settings">Settings</string>
  <string name="lbl_transfer_money">Transfer Money</string>
  <string name="lbl_billing_details">Billing Details</string>
  <string name="lbl_send_money">Send Money</string>
  <string name="lbl_national_bank">National Bank</string>
  <string name="lbl_150">150</string>
  <string name="msg_terms_conditions">Terms &amp; Conditions</string>
  <string name="lbl_remember_me">Remember me</string>
  <string name="lbl_portugal">Portugal</string>
</resources>
