<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_vertical"
        android:id="@+id/linearSkype"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageButton
            android:background="@drawable/rectangle_bg_name_light_blue_500_opacity_0_15_radius_13"
            android:id="@+id/btnContrast"
            android:layout_gravity="center_vertical"
            android:layout_height="@dimen/_50pxh"
            android:layout_width="@dimen/_50pxh"
            android:paddingHorizontal="@dimen/_15pxh"
            android:paddingVertical="@dimen/_15pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_contrast_light_blue_500" tools:ignore="ContentDescription"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearSkypePremium"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtSkypePremium"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_skype_premium"
                style="@style/txtPoppinsmedium14" tools:text="@string/lbl_skype_premium"/>
            <TextView android:ellipsize="end" android:id="@+id/txtJune"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_20_june_2022"
                style="@style/txtPoppinsmedium10" tools:text="@string/lbl_20_june_2022"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameSpacer"
            android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <LinearLayout android:id="@+id/linearPrice"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="vertical">
            <TextView android:ellipsize="end" android:gravity="end"
                android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_56_00"
                style="@style/txtPoppinsmedium12_1" tools:text="@string/lbl_56_00"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtDebitCard"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_debit_card"
                style="@style/txtPoppinsmedium10" tools:text="@string/lbl_debit_card"/>
        </LinearLayout>
    </LinearLayout>
</layout>
