<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearForgotPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle{&quot;name&quot;:&quot;white_A700&quot;}">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <ImageButton
                android:background="@drawable/rectangle_border_name_gray_300_radius_17"
                android:id="@+id/btnArrowLeft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/img_arrow_left_black_900" tools:ignore="ContentDescription"/>
            <ImageButton
                android:background="@drawable/rectangle_border_name_gray_300_radius_17"
                android:id="@+id/btnUser"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/img_user" tools:ignore="ContentDescription"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_59pxv"
            android:paddingEnd="@dimen/_24pxh"
            android:paddingStart="@dimen/_24pxh" android:paddingTop="@dimen/_59pxv">
            <ImageView android:id="@+id/imageImage"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_210pxh"
                android:layout_width="@dimen/_280pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_group_205"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group_205"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtForgetPassword"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_forget_password"
                style="@style/txtPoppinssemibold22" tools:text="@string/lbl_forget_password"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/msg_please_enter_your"
                style="@style/txtPoppinsmedium14_3" tools:text="@string/msg_please_enter_your"/>
            <EditText
                android:background="@drawable/rectangle_border_name_gray_300_radius_13"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:hint="@string/lbl_xyz_gmail_com"
                android:id="@+id/etEmail" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_20pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:textColor="@color/{&quot;name&quot;:&quot;black_900&quot;}"
                android:textColorHint="@color/{&quot;name&quot;:&quot;black_900&quot;}"
                android:textFontWeight="400"
                android:textSize="@dimen/_14pxh"
                android:textStyle="normal" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/rectangle_bg_name_primary_radius_12"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:gravity="center" android:id="@+id/btnSendEmail"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_50pxv"
                android:layout_width="@dimen/_327pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_send_email"
                android:textAllCaps="false"
                android:textColor="@color/{&quot;name&quot;:&quot;white_A700&quot;}"
                android:textFontWeight="600"
                android:textSize="@dimen/_16pxh"
                android:textStyle="bold" tools:text="@string/lbl_send_email"/>
        </LinearLayout>
    </LinearLayout>
</layout>
